New endpoints, prepare for merge with launchpad API
