# docs/swagger.json
@@ -59,6 +59,97 @@
                 }
             }
         },
+        "/feerate": {
+            "get": {
+                "description": "Get fee rate for transaction",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Fees"
+                ],
+                "summary": "Get fee rate for transaction",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.FeeResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorHTTP"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorHTTP"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorHTTP"
+                        }
+                    }
+                }
+            }
+        },
+        "/inscription/image": {
+            "get": {
+                "description": "Get Base64 image from Inscription ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Inscriptions"
+                ],
+                "summary": "Get Base64 image from Inscription ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Inscription ID",
+                        "name": "idInscription",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.InscriptionPicResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorHTTP"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorHTTP"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorHTTP"
+                        }
+                    }
+                }
+            }
+        },
         "/inscriptions": {
             "get": {
                 "description": "List of Inscriptions in the wallet",
@@ -195,6 +286,56 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.Inscribe"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorHTTP"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorHTTP"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorHTTP"
+                        }
+                    }
+                }
+            }
+        },
+        "/transaction/raw": {
+            "get": {
+                "description": "Get Raw transaction from BTC code",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Transactions"
+                ],
+                "summary": "Get Raw transaction from BTC code",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Transaction ID",
+                        "name": "tx",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.RawTxResponse"
                         }
                     },
                     "400": {
@@ -358,6 +499,20 @@
                 }
             }
         },
+        "models.FeeResponse": {
+            "type": "object",
+            "properties": {
+                "feeRate": {
+                    "type": "integer"
+                },
+                "hasError": {
+                    "type": "boolean"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Inscribe": {
             "type": "object",
             "properties": {
@@ -371,6 +526,20 @@
                     "type": "string"
                 },
                 "reveal": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.InscriptionPicResponse": {
+            "type": "object",
+            "properties": {
+                "base64": {
+                    "type": "string"
+                },
+                "hasError": {
+                    "type": "boolean"
+                },
+                "status": {
                     "type": "string"
                 }
             }
@@ -398,6 +567,9 @@
                 "base64": {
                     "type": "string"
                 },
+                "feeRate": {
+                    "type": "integer"
+                },
                 "format": {
                     "type": "string"
                 }
@@ -411,6 +583,20 @@
                 }
             }
         },
+        "models.RawTxResponse": {
+            "type": "object",
+            "properties": {
+                "hasError": {
+                    "type": "boolean"
+                },
+                "rawTx": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "models.SendRequest": {
             "type": "object",
             "properties": {
@@ -419,6 +605,9 @@
                 },
                 "InscriptionID": {
                     "type": "string"
+                },
+                "feeRate": {
+                    "type": "integer"
                 }
             }
         },
