# models/http.go
@@ -17,11 +17,13 @@ type TxRequest struct {
 }
 
 type MintRequest struct {
-	Format string `json:"format"`
-	Base64 string `json:"base64"`
+	FeeRate int    `json:"feeRate"`
+	Format  string `json:"format"`
+	Base64  string `json:"base64"`
 }
 
 type SendRequest struct {
+	FeeRate       int    `json:"feeRate"`
 	Address       string `json:"Address"`
 	InscriptionID string `json:"InscriptionID"`
 }
@@ -34,4 +36,22 @@ type ListInscriptionsResponse struct {
 	HasError     bool      `json:"hasError"`
 	Status       string    `json:"status"`
 	Inscriptions []TxTable `json:"inscriptions"`
+}
+
+type FeeResponse struct {
+	HasError bool   `json:"hasError"`
+	FeeRate  int    `json:"feeRate"`
+	Status   string `json:"status"`
+}
+
+type RawTxResponse struct {
+	HasError bool   `json:"hasError"`
+	RawTx    string `json:"rawTx"`
+	Status   string `json:"status"`
+}
+
+type InscriptionPicResponse struct {
+	HasError bool   `json:"hasError"`
+	Base64   string `json:"base64"`
+	Status   string `json:"status"`
 }
